# xarray-esgf

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tox.ini
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
notebooks/: quick_start.ipynb
tests/: conftest.py  test_10_client.py  test_10_open_dataset.py  test_20_open_dataset.py  test_foo.py
xarray_esgf/: client.py  engine.py  engine_esgf.py  xarray_engine.py
