[project]
name = "xarray-esgf"
version = "0.0.1"
description = "Xarray backend for ESGF data"
authors = [{ name = "B-Open Solutions srl", email = "office@bopen.eu" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp",
    "cftime",
    "dask",
    "esgpull>=0.9.3",
    "h5netcdf",
    "requests",
    "tqdm",
    "xarray",
]

[project.entry-points."xarray.backends"]
esgf = "xarray_esgf.engine:EsgfBackendEntrypoint"

[project.urls]
Homepage = "https://bopen.github.io/xarray-esgf/"
Repository = "https://github.com/bopen/xarray-esgf"
Documentation = "https://bopen.github.io/xarray-esgf/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "mypy>=0.991",
    "ruff>=0.11.5",
    "types-tqdm>=4.67.0.20250809",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xarray_esgf"]

[tool.mypy]
files = ["xarray_esgf", "tests"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = ["-vv"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
